# grist-availability

./: .eslintrc.js  LICENSE  README.md  dev.sh  package-lock.json  package.json  pyproject.toml  run.sh  setup.cfg
.github/workflows/: ci.yml
availability/: app.py  grist_client.py
availability/static/: availability.js
availability/templates/: base.html  index.html  message.html  notification-email.txt  thanks.html
responder/: app.py
responder/templates/: index.html
