[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "availability-response"
version = "2023.1"
description = "Mini web app to collect availability responses"

readme = "README.md"
repository = "https://github.com/inducer/availability-response"
authors = [
    { name  = "Andreas Kloeckner", email="inform@tiker.net"}
]
requires-python = ">=3.10,<4"

dependencies = [
    "flask~=3.0.0",
    "jinja2~=3.1.2",
    "requests~=2.31",
    "pygrist-mini~=2025.1",
]

[dependency-groups]
dev = [
    "ruff~=0.9.2",
    "mypy~=1.15",
    "pyright~=1.1.398",
]

[tool.hatch.build.targets.wheel]
packages = ["availability"]

[tool.ruff]
target-version = "py38"
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
]
extend-ignore = [
    "C901",   # McCabe
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "pytools",
]
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true

# vim: foldmethod=marker
